tests/baselines/reference/differenceAssignability.errors.txt
tests/cases/conformance/types/difference/differenceAssignability.ts(13,5): error TS2322: Type 'T - Gen' is not assignable to type 'T'.
tests/cases/conformance/types/difference/differenceAssignability.ts(14,5): error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T'.
tests/cases/conformance/types/difference/differenceAssignability.ts(15,5): error TS2322: Type 'T - { x: number; }' is not assignable to type 'T'.
tests/cases/conformance/types/difference/differenceAssignability.ts(23,5): error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T - { x: number; }'.
tests/cases/conformance/types/difference/differenceAssignability.ts(25,5): error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T - Gen'.


==== tests/cases/conformance/types/difference/differenceAssignability.ts (5 errors) ====
    interface Gen {
        x: number;
    }
    interface Gen2 {
        parent: Gen;
        millenial: string;
    }
    function cloneAgain<T extends Gen & Gen2>(t: T): T - Gen {
        let rest: T - Gen;
        let rest1: T - Gen - Gen2;
        var { x, ...rest2 } = t;
        // assignability
        t = rest; // error, might be missing 'x'
        ~
!!! error TS2322: Type 'T - Gen' is not assignable to type 'T'.
        t = rest1; // error, might be missing 'x', 'parent' or 'millenial'
        ~
!!! error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T'.
        t = rest2; // error, might be missing 'x'
        ~
!!! error TS2322: Type 'T - { x: number; }' is not assignable to type 'T'.
        rest = t; // ok
        rest1 = t; // ok
        rest2 = t; // ok
    
        rest = rest2; // ok
        rest2 = rest; // ok
        rest1 = rest2; // ok ... ?
        rest2 = rest1; // error, might be missing 'parent' or 'millenial'
        ~~~~~
!!! error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T - { x: number; }'.
        rest1 = rest; // ok
        rest = rest1; // error, might be missing 'parent' or 'millenial'
        ~~~~
!!! error TS2322: Type 'T - Gen - Gen2' is not assignable to type 'T - Gen'.
        return rest2;
    }
    